--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="main-ZFMJ4N4P.js" type="module"></script></body>
+<script src="main-YJOMUBY6.js" type="module"></script></body>
 </html>
